Fin de la version tablette et petites corrections desktop

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,9 @@ nav a {
   padding: 13px 25px 46px 25px;
   font-weight: 500;
   font-size: 1rem;
+}
+
+nav {
   margin-right: 16px;
 }
 
@@ -381,6 +384,7 @@ b {
   display: flex;
   flex-direction: column;
   margin-top: 65px;
+  margin-left: 30px;
 }
 
 .activites h1 {
@@ -425,7 +429,9 @@ footer {
   margin-top: 60px;
   background-color: #F2F2F2;
   display: flex;
-  gap: 245px;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 252px;
   padding-left: 20px;
 }
 
@@ -434,38 +440,99 @@ footer {
   margin-top: 20px;
 }
 
+.colonne-3 {
+  margin-left: 29px;
+}
+
 .colonne h2 {
   margin-bottom: 20px;
 }
 
-.colonne-3 {
-  margin-left: 60px;
-}
-
-
-
 @media screen and (max-width: 1024px) {
+
   body {
-    margin-left: 0px;
+    margin: 0px;
+    max-width: 1024px;
+    width: 100%;
+    margin: auto;
+  }
+
+  nav {
     margin-right: 0px;
+  }
+
+  .filtres {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    margin-bottom: 0px;
+    gap: 0px;
+  }
+  
+  .filtres p {
+    margin-bottom: 25px;
+  }
+
+  .liste-item-filtre {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    flex-wrap: wrap;
+    margin-right: -20px;
+    column-gap: 15px;
+    row-gap: 15px;
+  }
+
+  .item-filtre {
+    display: flex;
+    align-items: center;
+    border: rgb(242, 242, 242, 1) solid 3px;
+    border-radius: 25px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 17px;
+    font-weight: 900;
+  }
+
+  .item-filtre p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .item-filtre i {
+    margin-top: 0px;
+  }
+
+  .info {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
   }
 
   .rubriques {
     display: flex;
     flex-direction: column;
-    margin-top: 53px;
+    margin-top: 20px;
+    gap: 50px;
   }
 
   .hebergements {
-    width: 100%;
+    max-width: 924px;
     padding-left: 0px;
     display: flex;
     flex-direction: column;
   }
-
+  
   .carte-hebergement {
     max-width: 268px;
     max-height: 207px;
+  }
+
+  .format-image-hebergement {
+    width: 95%;
+    height: 60%;
   }
 
   .hebergements h1 {
@@ -478,11 +545,6 @@ footer {
 
   .hebergements h2 {
     margin-left: 30px;
-  }
-
-  .format-image-hebergement {
-    min-width: 96%;
-    height: 40%;
   }
   
   .carte-hebergement h3 {
@@ -497,51 +559,44 @@ footer {
     padding-left: 16px;
     margin-top: 6px;
     margin-bottom: 6px;
-    }
+  }
 
   .populaire {
-  width: 924px;
-  height: 250px;
-  padding-left: 0px;
+  max-width: 864px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0px;
   }
   
   .entete-populaire {
     display: flex;
     justify-content: space-between;
-  }
-
-  .populaire h1 {
-    margin-left: 30px;
-    margin-right: 585px;
+    align-items: flex-end;
     margin-top: 30px;
+    margin-bottom: 20px;
   }
-
-  .entete-populaire i {
-    margin-right: 30px;
-  }
-
-  .populaire i {
-    margin-top: 35px;
-  }
-
-  .carte-populaire {
-    width: 275px;
-    height: 144px;
-    border-radius: 20px;
-    margin-top: 20px;
-    margin-left: 0px;
-  }
-
+  
   .mosaic-populaire {
+    max-width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: flex-start;
     gap: 20px;
-    margin-left: 30px;
+    margin-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 30px; 
+  }
+  
+  .carte-populaire {
+    flex-basis: 100%;
+    max-width: 275px;
+    border-radius: 20px;
   }
 
   .format-image-populaire {
-    width: 88px;
-    height: 134px;
+    width: 33.2%;
+    max-height: 95%;
     object-fit: cover;  
   }
 
@@ -562,36 +617,56 @@ footer {
     margin-top: 5px;
     margin-bottom: 10px;
   }
-
-  .prix-carte-3 {
-    padding-bottom: 20px;
-    }
+  
+  .carte-activite {
+    width: 23%;
+    max-width: 193.5px;
+  }
 
   .format-image-activites {
-    width: 193px;
-    height: 200px;
+    width: 100%;
+    max-height: 200px;
     object-fit: cover;  
   }
 
-    .carte-activite h3 {
-    width: 173px;
-    height: 70px;
+  .carte-activite h3 {
+    padding-left: 20px;
     padding-top: 20px;
-    padding-left: 0px;
-    padding-right: 0px;
-    margin-top: -3px;
+    padding-bottom: 20px;
   }
 
   footer {
+    max-width: 904px;
     background-color: #F2F2F2;
     display: flex;
-    gap: 112px;
+    gap: 13.7%;
   }
 
   .colonne-3 {
-    margin-left: 68px;
+    margin-left: 29px;
   }
-
+  /* footer {
+    margin-left: 50px;
+    max-width: 1324px;
+    margin-top: 60px;
+    background-color: #F2F2F2;
+    display: flex;
+    gap: 245px;
+    padding-left: 20px;
+  }
+  
+  .colonne {
+    margin-bottom: 58px;
+    margin-top: 20px;
+  }
+  
+  .colonne h2 {
+    margin-bottom: 20px;
+  }
+  
+  .colonne-3 {
+    margin-left: 60px;
+  } */
 }
 
 @media screen and (max-width: 576px) {
